static/css/main.css
/* ... */
.page {
  padding: 0 0.5em;
  position: relative;
}

.wrapper {
  margin: 0 auto;
  max-width: 960px;
}

/* Links */
a {
  color: #42b4ff;
  transition: background-color .15s ease, color .15s ease;
  -webkit-text-decoration-skip: ink;
  text-decoration-skip: ink;
}

a:hover,
a:focus,
a:active {
  color: #0088f1;
}

.link--primary {
  color: #ff0080;
  font-weight:bold;
  text-decoration:none;
}

.link--danger {
  color: #f30;
}

.link--danger:hover,
.link--danger:focus,
.link--danger:active {
  color: #e62e00;
}

/* ---------------------------------------------------------------------
  Beta Alert
  1. once beta is over, .page can be moved to body
     and .wrapper can be removed entirely.
--------------------------------------------------------------------- */
.alert {
  background: #ffd4d4;
  color: #ff1c1c;
  font-size: .9em;
  font-weight: 300;
  line-height: 1.25;
}

.alert a,
.alert strong {
  color: #ff1c1c;
  font-weight: bold;
}

.alert marquee {
  padding: .66em 1em;
}

/* ---------------------------------------------------------------------
  Header Layout
--------------------------------------------------------------------- */
.site-header {
  display: flex;
}

/* logo */
.site-branding {
  margin-right: 1em;
  margin-top: 1em;
  width: 211px;
}

.site-branding--logo {
  display: block;
  height: auto;
  width: 100%;
}

/* actions toolbar */
.site-nav {
  flex: 1;
  margin-top: 65px;
  position: relative;
  text-align: right;
}

/* ---------------------------------------------------------------------
  Site Nav Layout
--------------------------------------------------------------------- */
.site-nav--toggle {
  display: inline-block;
}

.site-nav--list {
  display: none;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
  position: absolute;
  right: 0;
  top: 47px;
  z-index: 99;
}

.site-nav.is-expanded .site-nav--list {
  display: flex;
}

.site-nav--item {
  display: flex;
  flex: none;
  justify-content: flex-end;
}

.site-nav--item + .site-nav--item {
  margin-top: .25em;
}

@media screen and (min-width: 768px) {

  .site-nav--toggle {
    display: none;
  }

  .site-nav--list {
    display: flex;
    flex-direction: row;
    position: static;
  }

  .site-nav--item + .site-nav--item {
    margin-top: 0;
    margin-left: 1em;
  }

  /* stretch the last item in the nav */
  .site-nav--upload,
  .site-nav--signup {
    flex-grow: 1;
  }
}

/* ---------------------------------------------------------------------
  User Nav Layout
--------------------------------------------------------------------- */
.user-nav {
  background-color: #fff;
  border-bottom-left-radius: 1em;
  font-size: 0.75em;
  padding: 0.75em 1.5em;
  position: absolute;
  right: 0;
  top: 0;
}

.user-nav--list {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
}

.user-nav--item + .user-nav--item {
  margin-left: 1.5em;
}

.user-nav--link {
  font-weight: bold;
  text-decoration: none;
  white-space: nowrap;
}

/* ---------------------------------------------------------------------
  Choose A Shake Dropdown
--------------------------------------------------------------------- */
.choose-a-shake {
  position: relative;
  text-align: left;
  z-index: 3;
}

/* TODO: Make this a reusable button style */
.choose-a-shake--toggle {
  background-color: #b9ff8d;
  border-radius: 10px;
  border: none;
  color: #0caf8b;
  font-size: 16px;
  font-weight: bold;
  padding: 13px 19px;
  white-space: nowrap;
}

.choose-a-shake.is-expanded .choose-a-shake--toggle {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  box-shadow: 5px 5px 0 #e5e5e5;
  outline: none;
}

.choose-a-shake.is-expanded .choose-a-shake--toggle .caret {
  transform: rotate(180deg);
}

.choose-a-shake--dropdown {
  background-color: #b9ff8d;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  box-shadow: 5px 5px 0 #e5e5e5;
  display: none;
  left: 0;
  padding: 1px 10px 10px 10px;
  position: absolute;
  right: 0;
  top: 100%;
}

.choose-a-shake.is-expanded .choose-a-shake--dropdown {
  display: block;
}

.choose-a-shake ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.choose-a-shake--dropdown ul.top-shakes li a {
  display: block;
  background-color: #fff;
  padding: 10px 0 10px 15px;
  margin: 10px 0;
  font-size: 14px;
  color: #ff0080;
  text-decoration: none;
  font-weight: bold;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
}

.choose-a-shake--dropdown ul.top-shakes li a:hover {
  background-color: #fffbd9;
}

.choose-a-shake--dropdown ul.group-shakes {
  background-color: #fff;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
}

.choose-a-shake--dropdown ul.group-shakes li a {
  text-decoration: none;
  padding: 10px 15px;
  border-radius: 10px;
  display: block;
  font-size: 14px;
  color: #ff0080;
  font-weight: bold;
  word-wrap: break-word;
  overflow-wrap: break-word;
}

.choose-a-shake--dropdown ul.group-shakes li a:hover {
  background-color: #fffbd9;
}

.choose-a-shake--dropdown .add-a-shake {
  display: block;
  float: right;
  background-color: #0caf8b;
  margin-top: 10px;
  font-size: 12px;
  font-weight: bold;
  padding: 5px 10px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  color: #fff;
  text-decoration: none;
  text-shadow: 1px 1px 1px #0a8f72;
}

.choose-a-shake--dropdown .add-a-shake:hover {
 background-color: #0a8f72;
}
/* ... */

